--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,8 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +25,12 @@ a {
     color: white;
     background: black;
   }
+}
+
+.whole {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #b8b8ff;
 }
