--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap");
+
 a {
   color: inherit;
   text-decoration: none;
@@ -32,5 +34,5 @@ a {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #b8b8ff;
+  background-color: #cccccc;
 }
