--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,5 +1,6 @@
 .navbar {
-  background-color: #9381ff;
+  background-color: #6655d1;
+
   height: 100%;
 
   border-top-left-radius: 12px;
@@ -7,9 +8,17 @@
 }
 
 .headerOne {
+  font-size: 2rem;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
 }
 
 .links {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+  font-family: "Raleway", sans-serif;
 }
 
 /* #9381FF #B8B8FF #F8F7FF */
