--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -10,7 +10,7 @@
 .headerOne {
   font-size: 2rem;
   color: white;
-  font-family: "Raleway", sans-serif;
+  font-family: "Lora", serif;
   font-weight: 500;
 }
 
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   font-size: 1.4rem;
-  font-family: "Raleway", sans-serif;
+  font-family: "Lora", serif;
 }
 
 /* #9381FF #B8B8FF #F8F7FF */
